h tabs padding fix on some screens and wide alignment fix on container grid in backend

--- a/src/blocks/block-grid-container/styles/editor.scss
+++ b/src/blocks/block-grid-container/styles/editor.scss
@@ -700,8 +700,8 @@ body.folded .is-sidebar-opened .editor-styles-wrapper[style*="width: 780px"] .wp
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container[data-align="wide"],
 	body.folded .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container[data-align="wide"] {
 		width: 120%;
-		margin-left: -10%;
-		margin-right: -10%;
+		margin-left: 0;
+		margin-right: 0;
 		max-width: 1368px;
 	}
 
